--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ repository = "https://github.com/trangar/mio-child-process"
 [dependencies]
 mio-extras = "2.0.4"
 mio = "0.6.14"
+
+[target.'cfg(windows)'.dependencies]
+winapi = { version = "0.3" }
