Fixed pipeline issues in code

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,11 @@ license = "MIT"
 repository = "https://github.com/trangar/mio-child-process"
 
 [dependencies]
-mio-extras = "2.0.5"
-mio = "0.7.0"
+mio-extras = "2.0.6"
+mio = "0.6.2" # dependency of mio-extras
 
 [target.'cfg(target_os = "windows")'.dependencies]
 winapi = { version = "0.3", features = ["tlhelp32"] }
 
 [target.'cfg(target_os = "linux")'.dependencies]
-libc = { version = "0.2.43" }
+libc = { version = "0.2.71" }
